apply spotless
Signed-off-by: Shivansh Arora <hishiv@amazon.com>